--- a/projects/ngx-magic-table/src/lib/ngx-magic-table/ngx-magic-table.component.html
+++ b/projects/ngx-magic-table/src/lib/ngx-magic-table/ngx-magic-table.component.html
@@ -1,31 +1,42 @@
-<div (domChange)="onMainDomChange($event)" [ngClass]="[isRTL ? 'rtl' : 'ltr']" style="height: inherit; overflow: hidden;">
-  <div id="MainMagicTableId" class="mainMagicTable" style="height: inherit; overflow-y: overlay">
-    <div class="paddingDiv" [style.width.px]="tableWidth" style="height: inherit;">
+<div (domChange)="onMainDomChange($event)" [ngClass]="[isRTL ? 'rtl' : 'ltr']"
+  style="overflow: hidden;">
+  <div id="MainMagicTableId" class="mainMagicTable" style="overflow-y: overlay">
+    <div class="paddingDiv">
       <table [ngClass]="tableClass" class="rz-table">
         <thead class="ngxThead" [ngClass]="theadClass">
           <tr *ngFor="let cellRow of cells">
-            <th *ngFor="let cell of inverseArray(cellRow)" [style.max-width.px]="cell.cellWidth" [style.min-width.px]="cell.cellWidth"
-              [style.width.px]="cell.cellWidth" [ngStyle]="{'display': cell.visible === 'false' ? 'none' : ''}"
-              [attr.visible]="cell.visible" [name]="cell.name" [id]="uid+'-'+cell.name+'-head'" [draggable]="cell.template.draggable"
+            <th *ngFor="let cell of inverseArray(cellRow)" [style.max-width.px]="cell.cellWidth"
+              [style.min-width.px]="cell.cellWidth" [style.width.px]="cell.cellWidth"
+              [ngStyle]="{'display': cell.visible === 'false' ? 'none' : ''}" [attr.visible]="cell.visible"
+              [name]="cell.name" [id]="uid+'-'+cell.name+'-head'" [draggable]="cell.template.draggable"
               (drop)="drop(cell)" (dragover)="allowDrop($event)" (dragstart)="drag(cell)" [attr.colspan]="cell.colSpan"
               [attr.rowspan]="cell.rowSpan" data-toggle="tooltip" data-placement="bottom" [attr.title]="cell.title">
 
               <div [id]="cell.name+'resizable'" (mousedown)="resizeHandle(cell,$event,'tbody1')" class="rz-handle">
               </div>
               <div class="th-title" (click)="sortToggle(cell)">
-                <ng-template [ngTemplateOutlet]="cell.template.header" [ngTemplateOutletContext]="{cell: cell, direction: (cell.name === sort) ? sortDirection : undefined}">
+                <ng-template [ngTemplateOutlet]="cell.template.header"
+                  [ngTemplateOutletContext]="{cell: cell, direction: (cell.name === sort) ? sortDirection : undefined}">
                 </ng-template>
+                <div *ngIf="cell.template.headerCheckbox == true" class="col-md-12 text-center">
+                  <label class="checkbox-inline custom-checkbox nowrap">
+                    <input type="checkbox" class="form-control" (change)="cell.template.emitToggle()" />
+                    <span></span>
+                  </label>
+                </div>
               </div>
               <ng-container *ngIf="cell.template.filter">
                 <div ngbDropdown (click)="$event.stopPropagation()" class="dropdown float-right">
-                  <button ngbDropdownToggle type="button" [ngClass]="[cell.template.filters.length == 0 ? 'btn-default' : 'btn-warning']"
-                    class="btn " [id]="cell.name + '-' + uid  + '-filter'">
+                  <button ngbDropdownToggle type="button"
+                    [ngClass]="[cell.template.filters.length == 0 ? 'btn-default' : 'btn-warning']" class="btn "
+                    [id]="cell.name + '-' + uid  + '-filter'">
                     <i class="fa fa-filter"></i>
                   </button>
                   <div ngbDropdownMenu [aria-labelledby]="cell.name + '-' + uid  + '-filter'" class="dropdown-menu"
                     (click)="$event.stopPropagation()">
                     <div class="container">
-                      <ng-template [ngTemplateOutlet]="cell.template.filter" [ngTemplateOutletContext]="{cell: cell, rows: rows}"></ng-template>
+                      <ng-template [ngTemplateOutlet]="cell.template.filter"
+                        [ngTemplateOutletContext]="{cell: cell, rows: rows}"></ng-template>
                     </div>
                   </div>
                 </div>
@@ -39,14 +50,34 @@
         currentPage: currentPage,
         totalItems: customPaginate ? totalCount : rows.length,
         id: uid }">
-            <tr *ngFor="let i of Arr(getLcm(row)).fill(1); let in = index" (click)="selectRow(row)" [ngClass]="[row == rowSelected ? selectedClass : rowClassRenderer(row)]">
+            <tr *ngFor="let i of Arr(getLcm(row)).fill(1); let in = index" (click)="selectRow(row)"
+              [ngClass]="[row == rowSelected ? selectedClass : rowClassRenderer(row)]">
               <ng-container *ngFor="let cell of inverseArray(lowerCells); let lowerIndex = index">
-                <td [ngStyle]="{'display': cell.visible === 'false' ? 'none' : ''}" [style.min-width.px]="resizeCell(cell.cellWidth,lowerIndex)"
-                  [style.max-width.px]="resizeCell(cell.cellWidth,lowerIndex)" [style.width.px]="resizeCell(cell.cellWidth,lowerIndex)"
+                <td [ngStyle]="{'display': cell.visible === 'false' ? 'none' : ''}"
+                  [style.min-width.px]="resizeCell(cell.cellWidth,lowerIndex)"
+                  [style.max-width.px]="resizeCell(cell.cellWidth,lowerIndex)"
+                  [style.width.px]="resizeCell(cell.cellWidth,lowerIndex)"
                   *ngIf="((in) * (cell.template.collection === '' ? 1 : row[cell.template.collection].length)) % getLcm(row) === 0"
                   [attr.rowspan]="getLcm(row) / (cell.template.collection !== '' ? Math.max(row[cell.template.collection].length, 1) : 1)"
                   data-toggle="tooltip" data-placement="bottom" [attr.title]="row[cell.name]">
-                  <ng-template [ngTemplateOutlet]="cell.template.body" [ngTemplateOutletContext]="{row: row, cell: cell, index: ((in) * (cell.template.collection === '' ? 1 : row[cell.template.collection].length)) / getLcm(row)}"></ng-template>
+                  <ng-template [ngTemplateOutlet]="cell.template.body"
+                    [ngTemplateOutletContext]="{row: row, cell: cell, index: ((in) * (cell.template.collection === '' ? 1 : row[cell.template.collection].length)) / getLcm(row)}">
+                  </ng-template>
+                  <div *ngIf="cell.template.bodyCheckbox == true" class="col-md-12 text-center">
+                    <div  *ngIf="cell.template.editCheckbox == true" class="col-md-12 text-center">
+                      <label class="checkbox-inline custom-checkbox nowrap">
+                        <input type="checkbox" class="form-control" (change)="cell.template.emitCheckChange(row)" />
+                        <span></span>
+                      </label>
+                      <!-- <i (click)="cell.template.emitCheckChange(row)" *ngIf="row[cell.name] == true" class="ion-android-checkbox-outline"></i>
+                      <i (click)="cell.template.emitCheckChange(row)" *ngIf="row[cell.name] == false || row[cell.name] == null" class="ion-android-checkbox-outline-blank"></i> -->
+                    </div>
+                    <div *ngIf="cell.template.editCheckbox == false" class="col-md-12 text-center">
+                      <i *ngIf="row[cell.name] == true" class="ion-checkmark-round"></i>
+                      <i *ngIf="row[cell.name] == false" class="ion-close-round"></i>
+                    </div>
+
+                  </div>
                 </td>
               </ng-container>
             </tr>
@@ -54,14 +85,33 @@
         </tbody>
         <tbody id="tbody1" (domChange)="onDomChange($event)" class="ngxTbody" [ngClass]="tbodyClass" *ngIf="!paginated">
           <ng-container *ngFor="let row of rows | sort:{field: sort, direction: sortDirection, active: !customSort}">
-            <tr *ngFor="let i of Arr(getLcm(row)).fill(1); let in = index" (click)="selectRow(row)" [ngClass]="[row == rowSelected ? selectedClass : rowClassRenderer(row)]">
+            <tr *ngFor="let i of Arr(getLcm(row)).fill(1); let in = index" (click)="selectRow(row)"
+              [ngClass]="[row == rowSelected ? selectedClass : rowClassRenderer(row)]">
               <ng-container *ngFor="let cell of inverseArray(lowerCells); let lowerIndex = index">
-                <td [ngStyle]="{'display': cell.visible === 'false' ? 'none' : ''}" [style.min-width.px]="resizeCell(cell.cellWidth,lowerIndex)"
-                  [style.max-width.px]="resizeCell(cell.cellWidth,lowerIndex)" [style.width.px]="resizeCell(cell.cellWidth,lowerIndex)"
+                <td [ngStyle]="{'display': cell.visible === 'false' ? 'none' : ''}"
+                  [style.min-width.px]="resizeCell(cell.cellWidth,lowerIndex)"
+                  [style.max-width.px]="resizeCell(cell.cellWidth,lowerIndex)"
+                  [style.width.px]="resizeCell(cell.cellWidth,lowerIndex)"
                   *ngIf="((in) * (cell.template.collection === '' ? 1 : row[cell.template.collection].length)) % getLcm(row) === 0"
                   [attr.rowspan]="getLcm(row) / (cell.template.collection !== '' ? Math.max(row[cell.template.collection].length, 1) : 1)"
                   data-toggle="tooltip" data-placement="bottom" [attr.title]="row[cell.name]">
-                  <ng-template [ngTemplateOutlet]="cell.template.body" [ngTemplateOutletContext]="{row: row, cell: cell, index: ((in) * (cell.template.collection === '' ? 1 : row[cell.template.collection].length)) / getLcm(row)}"></ng-template>
+                  <ng-template [ngTemplateOutlet]="cell.template.body"
+                    [ngTemplateOutletContext]="{row: row, cell: cell, index: ((in) * (cell.template.collection === '' ? 1 : row[cell.template.collection].length)) / getLcm(row)}">
+                  </ng-template>
+                  <div *ngIf="cell.template.bodyCheckbox == true" class="col-md-12 text-center">
+                    <div *ngIf="cell.template.editCheckbox == true" class="col-md-12 text-center">
+                      <label class="checkbox-inline custom-checkbox nowrap">
+                        <input type="checkbox" class="form-control" (change)="cell.template.emitCheckChange(row)" />
+                        <span></span>
+                      </label>
+                      <!-- <i (click)="cell.template.emitCheckChange(row)" *ngIf="row[cell.name] == true" class="ion-android-checkbox-outline"></i>
+                      <i (click)="cell.template.emitCheckChange(row)" *ngIf="row[cell.name] == false || row[cell.name] == null" class="ion-android-checkbox-outline-blank"></i> -->
+                    </div>
+                    <div *ngIf="cell.template.editCheckbox == false" class="col-md-12 text-center">
+                      <i *ngIf="row[cell.name] == true" class="ion-checkmark-round"></i>
+                      <i *ngIf="row[cell.name] == false" class="ion-close-round"></i>
+                    </div>
+                  </div>
                 </td>
               </ng-container>
             </tr>
@@ -71,9 +121,10 @@
     </div>
   </div>
   <div id="MainMagicPagingId" class="btn-group paging">
-    <lib-ngx-multiselect-dropdown class="pagingInline" [buttonListColumnStyle]="buttonSaveTableStyle" (change)="onItemSelect($event)"
-      [placeholder]="'Select Columns'" [data]="dropdownList" [(ngModel)]="dropdownselectedItems" [settings]="dropdownSettings"
-      (onSelect)="onItemSelect($event)" (onDeSelect)="onItemDeSelect($event)" (onSelectAll)="onSelectAll($event)" >
+    <lib-ngx-multiselect-dropdown class="pagingInline" [buttonListColumnStyle]="buttonSaveTableStyle"
+      (change)="onItemSelect($event)" [placeholder]="'Select Columns'" [data]="dropdownList"
+      [(ngModel)]="dropdownselectedItems" [settings]="dropdownSettings" (onSelect)="onItemSelect($event)"
+      (onDeSelect)="onItemDeSelect($event)" (onSelectAll)="onSelectAll($event)">
     </lib-ngx-multiselect-dropdown>
     <div class="pagingInline" style="margin-left: 2px; margin-right: 2px">
       <button (click)="onsaveTable()" [ngClass]="buttonSaveTableStyle" title="Save Table">
@@ -92,10 +143,12 @@
       <span>{{message}}</span>
     </div>
     <div class="pagingInline" *ngIf="paginated && !pagination">
-      <pagination-controls class="pagingInline" (pageChange)="selectPage($event)" previousLabel="" nextLabel="" [id]="uid"></pagination-controls>
+      <pagination-controls class="pagingInline" (pageChange)="selectPage($event)" previousLabel="" nextLabel=""
+        [id]="uid"></pagination-controls>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <div *ngIf="pageSizes.length" class="dropdown pagingInline">
-        <select class="btn btn-secondary btn-sm dropdown-toggle" [value]='pageSize' (change)="changePerPage($event.target.value)">
+        <select class="btn btn-secondary btn-sm dropdown-toggle" [value]='pageSize'
+          (change)="changePerPage($event.target.value)">
           <option *ngFor="let p of pageSizes" class="btn btn-sm btn-secondary">{{p}}</option>
         </select>
       </div>
@@ -103,3 +156,4 @@
   </div>
 
 </div>
+<!-- [ngModel]="row[cell.name]" -->
