--- a/projects/ngx-magic-table/src/lib/ngx-magic-table/ngx-magic-table.component.scss
+++ b/projects/ngx-magic-table/src/lib/ngx-magic-table/ngx-magic-table.component.scss
@@ -1,3 +1,13 @@
+$font-light: 300;
+$disabled: #b7b7b7;
+$border: #ced4da;
+$primary: #00abff !default;
+$primary-bg: tint($primary, 20%);
+$default: black;
+$default-text: $default;
+$content-text: $default-text;
+
+
 table thead th {
   -webkit-user-select: none;
   /* Safari */
@@ -260,3 +270,69 @@ ul.ngx-pagination {
   margin-right: 5px
 }
 
+
+label.custom-checkbox {
+  padding-right: 0;
+  padding-left: 0;
+  margin-bottom: 0;
+  &>input {
+      height: 0;
+      z-index: -100 !important;
+      opacity: 0;
+      position: absolute;
+      &:checked {
+          &+span {
+              &:before {
+                  content: "\f00c";
+                  font-weight: $font-light;
+              }
+          }
+      }
+      &:disabled {
+          &+span {
+              color: $disabled;
+              cursor: not-allowed;
+              &:before {
+                  border-color: $disabled !important;
+                  cursor: not-allowed;
+              }
+          }
+      }
+  }
+  &>span {
+      position: relative;
+      display: inline-block;
+      margin: 0;
+      line-height: 16px;
+      font-weight: $font-light;
+      cursor: pointer;
+      padding-left: 22px;
+      width: 100%;
+      &:before {
+          cursor: pointer;
+          font-family: fontAwesome;
+          font-weight: $font-light;
+          font-size: 12px;
+          color: $content-text;
+          content: "\a0";
+          background-color: transparent;
+          border: 1px solid $border;
+          border-radius: 0;
+          display: inline-block;
+          text-align: center;
+          height: 16px;
+          line-height: 14px;
+          min-width: 16px;
+          margin-right: 6px;
+          position: relative;
+          top: 0;
+          margin-left: -22px;
+          float: left;
+      }
+      &:hover {
+          &:before {
+              border-color: $primary-bg;
+          }
+      }
+  }
+}
